...
              onSubmitEditing={() => {
                searchQuery.trim() === "" && resetIsSearching();
              }} 
              testID="destination-input"
            />
          </View>
          <View style={styles.switchContainer} testID="switch-container">
            <TouchableOpacity onPress={onSwitchPress} testID="switch-button">
              <FontAwesome5 name="exchange-alt" size={22} color="#fff" style={{ marginLeft: 0, transform: [{ rotate: "90deg" }] }} />
            </TouchableOpacity>
          </View>
        </View>

...
    fontWeight: "bold",
    textAlignVertical: "center",
    backgroundColor: "transparent",
    borderBottomWidth: 0,
    borderWidth: 0,
  },
  card: {
    margin: 4,
    padding: 5,
    borderRadius: 8,
    elevation: 3,
    backgroundColor: "#fff",
  },
...
