...
                <Switch
                    trackColor={{ false: "#ddd", true: "#912338" }}
                    thumbColor={"#fff"}
                    ios_backgroundColor="#ddd"
                    onValueChange={toggleSwitch}
                    value={isEnabled}
                    testID="route-switch"
                />
                <Text style={[styles.switchText, selectedRoute === "SGW" && styles.activeText]} testID="SGW-text">SGW</Text>
            </View>

            {/* 🔄 Shuttle Schedule */}
            <ShuttleSchedule route={selectedRoute} testID="ShuttleSchedule" />
...
